Add error page and redirect

--- a/app_engine_data/showserverip.html
+++ b/app_engine_data/showserverip.html
@@ -3,7 +3,7 @@
 	<title>Server Address</title>
 	<body>
 		<center>
-			<h2> Server IP </h2>
+			<h2> Server {{ header }} </h2>
 			<br>
 			<form action="" method="post" accept-charset="utf-8">
 			<p>Password: <input type="password" name="password" value="" id="pw1"></p>
